# cannibalization_reatail

./: .gitignore  00_run_pipeline.py  01_run_sweep.py  CONFIGURACION_EPISODIOS.md  ESTRATEGIA_EXPERIMENTOS.md  FINAL_PAPER_README.md  MEJORAS_METALEARNERS.md  README.md  README_EDA_ONLY.md  RESUMEN_CAMBIOS.md  VARIACION_POR_EXPERIMENTO.md  _check_self_donors.py  all_metrics_merged_by_episode_final.xlsx  check_donor_quality.py  check_donors_file.py  check_gsc_episodes.py  check_meta_files.py  check_png_files.py  compute_experiment_metrics.py  compute_experiment_robustness.py  compute_experiment_sensitivity.py  debug_eda_processing.py  debug_meta_columns.py  diagnose_correlations.py  diagnose_dates.py  diagnose_episodes.py  diagnose_train_mask.py  draw_preprocess.ipynb  experiments.yaml  favorita_analysis.py  generate_base_dataset.py  investigate_duplicate_episodes.py  make_paper_figures.py  overfitting_report.txt  pipeline_config.yaml  pyproject.toml  regenerate_eda_figures.py  rerun_eda_algorithms.py  rerun_step4_A_base.py  rerun_step5_gsc_A_base.py  (+16 more)
EDA/: EDA_algorithms.py  eda_1.py  eda_2.py  eda_3.py  eda_4.py
diagnostics/: .exp_A_base.stamp  _debug_shapes.json  episode_diagnostics.csv  episode_quality_summary.csv  pipeline_run_manifest.json
notebooks/: 01_EDA.ipynb  02_Modelo_Control_Sintetico.ipynb  03_MetaLearners.ipynb  eda_script.py
src/conf/: config.py
src/evaluation/: evaluator.py
src/models/: causal_metrics.py  meta_learners.py  synthetic_control.py
src/preprocess_data/: 1. data_quality.py  2. competitive_exposure.py  2. competitive_exposure_logging_fix.py  3. select_pairs_and_donors.py  3. select_pairs_and_donors.py.backup  3. select_pairs_and_donors_temp.py  4. pre_algorithm.py  build_treatment.py  build_treatment_gpu.py  competitive_exposure.py  data_loader.py  data_validation.ipynb  donors_selector.py  feature_engineering.py  pre_algo.ipynb  pre_gsc.py  pre_meta_learners.py  preprocess.ipynb  run_preprocessors.py  select_pairs_and_donors.py  test.py
src/preprocess_data/diagnostics/: pipeline_run_manifest.json
src/utils/: utils.py
