[tool.poetry]
name = "ml-canibalizacion-retail"
version = "0.1.0"
description = "Trabajo de grado: Comparación de Control Sintético y Meta-learners en Series Temporales para estimar canibalización de productos"
authors = ["Richard Andrés Ortega Mutis <correo@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# Versiones compatibles con dowhy 0.9.1
numpy = "^1.23"
pandas = "^1.5"
scikit-learn = "<1.2"
statsmodels = "^0.13.5"
matplotlib = ">=3.6,<3.8"
seaborn = "^0.11"
plotly = "^5.10"
graphviz = "^0.20"
networkx = "^2.8"

# Inferencia causal
dowhy = "0.9.1"
econml = "^0.15.0"  # Compatible con scikit-learn <1.2
causalgraphicalmodels = "^0.0.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

